# DL2_HSE

./: README.md
homeworks/competition/: README.md  prompt2noise.pt  prompts.txt  task_competition.ipynb
homeworks/homework_01/: README.md
homeworks/homework_02/: README.md  task.ipynb
homeworks/homework_03/: README.md  task.ipynb
homeworks/homework_04/: README.md  task.ipynb
homeworks/homework_05/: README.md  task.ipynb
week_01/: README.md
week_01/seminar/: bench_attention.py  benchmark_scripts.sh  nondeterminism_example.py  seminar_1_final.ipynb
week_01/seminar/src/: __init__.py  data.py  model.py
week_02/: README.md
week_03/: README.md
week_04/: README.md
week_05/: README.md
week_06/: README.md
week_06/seminar/: handler.py
week_07/: README.md
week_08/: README.md
week_09/: README.md
week_10/: README.md
week_10/seminar/: our_kaolin.py  utils.py
week_11/: README.md  practice.ipynb  requirements.txt
week_12/: README.md  requirements.txt
week_12/seminar/: seminar_neural_networks.ipynb  seminar_part_build_graph.ipynb
week_13/: README.md  lecture.org
week_13/seminar/: README.md  lib.py  pyproject.toml
