[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nanotabdl"
version = "0.1.0"
description = "Minimal tabular deep learning for educational purposes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "lightgbm>=4.0.0",
    "matplotlib>=3.10.7",
    "mlx>=0.30.0",
    "nbclassic>=1.3.3",
    "numpy>=2.3.5",
    "optuna>=4.0.0",
    "polars>=1.35.2",
    "rtdl-num-embeddings>=0.0.12",
    "scikit-learn>=1.7.2",
    "tinygrad>=0.11.0",
    "tomli-w>=1.0.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]

[tool.setuptools]
py-modules = ["lib"]
packages = ["bin"]

[tool.uv]
package = true

[tool.uv.sources]
tinygrad = { git = "https://github.com/tinygrad/tinygrad" }
